--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "url": "https://github.com/kyuch4n/royce/issues"
   },
   "homepage": "https://github.com/kyuch4n/royce#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "vuepress": "^1.1.0"
+  }
 }
