--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,26 @@
 {
-	"parserOptions": {
-		"ecmaVersion": 2018,
-		"ecmaFeatures": {
-			"jsx": true
-		}
-	},
-	"plugins": [
-		"typescript"
-	],
-	"env": {
-		"browser": true,
-		"es6": true,
-		"node": true
-	},
-	"rules": {
-		"typescript/class-name-casing": "error",
+    "env": {
+        "browser": true,
+				"es6": true,
+				"node" : true,
+    		"jquery" : true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:vue/essential"
+    ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "vue"
+    ],
+    "rules": {
 		"for-direction": 2,
 		"getter-return": 2,
 		"no-async-promise-executor": 2,
