--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
+    "clean": "rm -rf build",
+    "start": "npm run clean && cross-env NODE_ENV=development node_modules/.bin/rollup -w -c scripts/rollup.config.js",
+    "build": "npm run clean && cross-env NODE_ENV=production node_modules/.bin/rollup -c scripts/rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -15,10 +18,26 @@
     "url": "https://github.com/kyuch4n/royce-ui/issues"
   },
   "homepage": "https://github.com/kyuch4n/royce-ui#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "autoprefixer": "^9.6.1",
+    "cross-env": "^6.0.0",
     "eslint": "^6.4.0",
-    "eslint-plugin-vue": "^5.2.3"
+    "eslint-plugin-vue": "^5.2.3",
+    "postcss-base64": "^0.7.1",
+    "postcss-scss": "^2.0.0",
+    "rollup": "^1.21.4",
+    "rollup-plugin-alias": "^2.0.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.3",
+    "rollup-plugin-vue2": "^0.8.1",
+    "vue": "^2.6.10"
   }
 }
