--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "royce-ui",
   "version": "0.1.0",
-  "description": "",
+  "description": "A Vue.js 2.0 Less Used UI Toolkit",
   "main": "./src/index.js",
   "scripts": {
-    "clean": "rm -rf build",
-    "start": "npm run clean && cross-env NODE_ENV=development node_modules/.bin/rollup -w -c scripts/rollup.config.js",
-    "build": "npm run clean && cross-env NODE_ENV=production node_modules/.bin/rollup -c scripts/rollup.config.js"
+    "clean": "rm -rf lib",
+    "dev": "npm run clean && cross-env NODE_ENV=development node_modules/.bin/rollup -w -c scripts/rollup.config.dev.js",
+    "build": "npm run clean && cross-env NODE_ENV=production node_modules/.bin/rollup -c scripts/rollup.config.prod.js",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
+    "deploy": "gh-pages -d docs/.vuepress/dist",
+    "deploy:build": "npm run docs:build && npm run deploy"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,7 @@
     "cross-env": "^6.0.0",
     "eslint": "^6.4.0",
     "eslint-plugin-vue": "^5.2.3",
+    "node-sass": "^4.12.0",
     "postcss-base64": "^0.7.1",
     "postcss-scss": "^2.0.0",
     "rollup": "^1.21.4",
@@ -38,6 +43,10 @@
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
     "rollup-plugin-vue2": "^0.8.1",
-    "vue": "^2.6.10"
-  }
+    "vue": "^2.6.10",
+    "vuepress": "^1.1.0"
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
