--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "royce-ui",
-  "version": "0.1.0",
+  "version": "0.1.1-beta.0",
   "description": "A Vue.js 2.0 Less Used UI Toolkit",
-  "main": "./src/index.js",
+  "main": "lib/royce-ui.min.js",
   "scripts": {
     "clean": "rm -rf lib",
     "dev": "npm run clean && cross-env NODE_ENV=development node_modules/.bin/rollup -w -c scripts/rollup.config.dev.js",
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/kyuch4n/royce-ui.git"
   },
-  "author": "",
+  "author": "kyuchan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kyuch4n/royce-ui/issues"
