--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "royce-ui",
-  "version": "0.1.1-beta.1",
+  "version": "0.1.1-beta.2",
   "description": "A Vue.js 2.0 Less Used UI Toolkit",
-  "main": "lib/royce-ui.min.js",
+  "main": "lib/royce-ui.js",
   "scripts": {
     "clean": "rm -rf lib",
     "dev": "npm run clean && cross-env NODE_ENV=development node_modules/.bin/rollup -w -c scripts/rollup.config.dev.js",
