--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "royce-ui",
-  "version": "0.1.1-beta.5",
+  "version": "1.0.0",
   "description": "A Vue.js 2.0 Less Used UI Toolkit",
   "main": "lib/royce-ui.js",
   "scripts": {
@@ -42,6 +42,7 @@
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
     "rollup-plugin-vue2": "^0.8.1",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vuepress": "^1.1.0"
   },
